[package]
name = "doughnuts"
version = "0.1.0"
authors = ["Josh Hawkins <hawkins@users.noreply.github.com>"]
edition = "2018"
autobins = false

[dependencies]
reqwest = "0.9.5"
select = "0.4.2"
regex = "1.1.0"
lambda_runtime = "0.1"
serde = "^1"
serde_json = "^1"
serde_derive = "^1"
log = "^0.4"
simple_logger = "^1"
rusoto_core = "0.36.0"
rusoto_dynamodb = "0.36.0"
rusoto_sns = "0.36.0"

[[bin]]
name = "bootstrap"
path = "src/main.rs"
